<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>st.examples</groupId>
    <artifactId>examples-ST</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>

        <!-- Java -->
        <java.version>25</java.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Compiler -->
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.version>3.14.1</maven.compiler.version>

        <!-- JUnit -->
        <junit.jupiter.version>5.12.2</junit.jupiter.version>
        <junit.platform.launcher.version>1.12.2</junit.platform.launcher.version>

        <!-- AssertJ -->
        <assertj.version>3.27.7</assertj.version>
        <assertj.swing.version>3.17.1</assertj.swing.version>

        <!-- Mockito -->
        <mockito.version>5.11.0</mockito.version>

        <!-- jqwik -->
        <jqwik.version>1.8.5</jqwik.version>

        <!-- JaCoCo -->
        <jacoco.version>0.8.13</jacoco.version>

        <!-- PIT -->
        <pitest.version>1.15.8</pitest.version>
        <pitest.junit5.version>1.2.1</pitest.junit5.version>

        <!-- Surefire -->
        <maven.surefire.version>3.5.3</maven.surefire.version>

    </properties>

    <dependencies>

        <!-- ========================= -->
        <!-- JUnit 5                   -->
        <!-- ========================= -->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- ========================= -->
        <!-- AssertJ Core              -->
        <!-- ========================= -->

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- ========================= -->
        <!-- AssertJ Swing             -->
        <!-- ========================= -->

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-swing</artifactId>
            <version>${assertj.swing.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- ========================= -->
        <!-- Mockito                   -->
        <!-- ========================= -->

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- ========================= -->
        <!-- jqwik                     -->
        <!-- ========================= -->

        <dependency>
            <groupId>net.jqwik</groupId>
            <artifactId>jqwik</artifactId>
            <version>${jqwik.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>

        <plugins>

            <!-- ======================================= -->
            <!-- Maven Compiler                          -->
            <!-- ======================================= -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>

                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <!-- ======================================= -->
            <!-- Maven Surefire                          -->
            <!-- ======================================= -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>

                <configuration>

                    <useModulePath>false</useModulePath>

                    <argLine>
                        @{argLine}
                        -Djava.awt.headless=false

                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED

                        --add-opens=java.desktop/java.awt=ALL-UNNAMED
                        --add-opens=java.desktop/java.awt.event=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing.text=ALL-UNNAMED
                    </argLine>

                </configuration>

            </plugin>

            <!-- ======================================= -->
            <!-- JaCoCo                                  -->
            <!-- ======================================= -->

            <plugin>

                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>

                <executions>

                    <execution>
                        <id>prepare-agent</id>

                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>report</id>

                        <phase>test</phase>

                        <goals>
                            <goal>report</goal>
                        </goals>

                    </execution>

                </executions>

            </plugin>

            <!-- ======================================= -->
            <!-- PIT                                     -->
            <!-- ======================================= -->

            <plugin>

                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>${pitest.version}</version>

                <dependencies>

                    <dependency>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-junit5-plugin</artifactId>
                        <version>${pitest.junit5.version}</version>
                    </dependency>

                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-launcher</artifactId>
                        <version>${junit.platform.launcher.version}</version>
                    </dependency>

                </dependencies>

                <configuration>

                    <jvmArgs>

                        <value>-Djava.awt.headless=false</value>

                        <value>--add-opens=java.base/java.lang=ALL-UNNAMED</value>
                        <value>--add-opens=java.base/java.util=ALL-UNNAMED</value>

                        <value>--add-opens=java.desktop/java.awt=ALL-UNNAMED</value>
                        <value>--add-opens=java.desktop/java.awt.event=ALL-UNNAMED</value>
                        <value>--add-opens=java.desktop/javax.swing=ALL-UNNAMED</value>
                        <value>--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED</value>

                    </jvmArgs>

                    <targetClasses>
                        <param>st.project.*</param>
                    </targetClasses>

                    <targetTests>
                        <param>st.project.*</param>
                    </targetTests>

                    <excludedTestClasses>
                        <param>st.project.game.GameGUIDominioTest</param>
                        <param>st.project.game.GameGUIEstruturaTest</param>
                        <param>st.project.game.GameGUIFronteiraTest</param>
                    </excludedTestClasses>

                    <outputFormats>
                        <param>HTML</param>
                    </outputFormats>

                    <timestampedReports>false</timestampedReports>

                </configuration>

            </plugin>

        </plugins>

    </build>

</project>
